--- a/services/connected_tag/BUILD.gn
+++ b/services/connected_tag/BUILD.gn
@@ -18,23 +18,23 @@ ROOT = "//foundation/communication/nfc/services/connected_tag"
 
 ohos_shared_library("nfc_connected_tag_service") {
   include_dirs = [
-    "//foundation/communication/nfc/interfaces/kits/native_cpp/connected_tag_base/interfaces",
-    "//foundation/communication/nfc/interfaces/kits/native_cpp/connected_tag_base/include",
+    "//foundation/communication/nfc/interfaces/innerkits/connected_tag/interfaces",
+    "//foundation/communication/nfc/interfaces/innerkits/connected_tag/include",
     "$ROOT/src/hardware/include",
     "include",
     "//base/security/access_token/interfaces/innerkits/accesstoken/include",
   ]
 
   sources = [
-    "src/connected_tag_session_stub.cpp",
-    "src/connected_tag_service_impl.cpp",
     "src/connected_tag_callback_proxy.cpp",
+    "src/connected_tag_service_impl.cpp",
+    "src/connected_tag_session_stub.cpp",
     "src/permission_tools.cpp",
   ]
 
   deps = [
-    "$ROOT/src/hardware:connected_tag_hdi_adapter",
     "$ROOT/etc/init:etc",
+    "$ROOT/src/hardware:connected_tag_hdi_adapter",
     "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
     "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
     "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
@@ -42,10 +42,10 @@ ohos_shared_library("nfc_connected_tag_service") {
   ]
 
   external_deps = [
+    "access_token:libaccesstoken_sdk",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
-    "access_token:libaccesstoken_sdk",
-    "ipc:ipc_core"
+    "ipc:ipc_core",
   ]
 
   part_name = "nfc_connected_tag"
