--- a/connected_tag/interfaces/js/napi/BUILD.gn
+++ b/connected_tag/interfaces/js/napi/BUILD.gn
@@ -37,7 +37,7 @@ ohos_shared_library("connectedtag") {
     "//base/notification/ces_standard/frameworks/core:cesfwk_core",
     "//base/notification/ces_standard/frameworks/native:cesfwk_innerkits",
     "//foundation/aafwk/standard/interfaces/innerkits/want:want",
-    "//foundation/ace/napi:ace_napi",
+    "//foundation/arkui/napi:ace_napi",
     "//foundation/communication/nfc/connected_tag/interfaces/innerkits:connected_tag_base",
     "//utils/native/base:utils",
   ]
