ace_engine、napi 部件名仓名和目录名整改
Change-Id: I5e3de864a0f19e67361d0ec03a1584d2251c4c24
Signed-off-by: zhangxiao72 <zhangxiao72@huawei.com>

--- a/nfc_core/interfaces/js/napi/BUILD.gn
+++ b/nfc_core/interfaces/js/napi/BUILD.gn
@@ -37,7 +37,7 @@ ohos_shared_library("controller") {
     "//base/notification/ces_standard/frameworks/core:cesfwk_core",
     "//base/notification/ces_standard/frameworks/native:cesfwk_innerkits",
     "//foundation/aafwk/standard/interfaces/innerkits/want:want",
-    "//foundation/ace/napi:ace_napi",
+    "//foundation/arkui/napi:ace_napi",
     "//foundation/communication/nfc/nfc_core/interfaces/innerkits:nfc_inner_kits",
     "//utils/native/base:utils",
   ]
