--- a/nfc_core/interfaces/innerkits/BUILD.gn
+++ b/nfc_core/interfaces/innerkits/BUILD.gn
@@ -28,6 +28,7 @@ config("nfc_inner_kits_public_config") {
   include_dirs = [
     "include",
     "include/controller",
+    "include/tags",
   ]
 }
 
@@ -36,13 +37,29 @@ ohos_shared_library("nfc_inner_kits") {
     "src/controller/nfc_controller.cpp",
     "src/controller/nfc_controller_proxy.cpp",
     "src/nfc_basic_proxy.cpp",
+    "src/nfc_sdk_common.cpp",
+    "src/tags/basic_tag_session.cpp",
+    "src/tags/iso15693_tag.cpp",
+    "src/tags/isodep_tag.cpp",
+    "src/tags/mifare_classic_tag.cpp",
+    "src/tags/mifare_ultralight_tag.cpp",
+    "src/tags/ndef_formatable_tag.cpp",
+    "src/tags/ndef_message.cpp",
+    "src/tags/ndef_tag.cpp",
+    "src/tags/nfca_tag.cpp",
+    "src/tags/nfcb_tag.cpp",
+    "src/tags/tag_session_proxy.cpp",
+    "src/tags/taginfo.cpp",
   ]
 
   configs = [ ":nfc_inner_kits_config" ]
 
   public_configs = [ ":nfc_inner_kits_public_config" ]
 
-  deps = [ "//utils/native/base:utils" ]
+  deps = [
+    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
+    "//utils/native/base:utils",
+  ]
 
   external_deps = [
     "hiviewdfx_hilog_native:libhilog",
