--- a/connected_tag/interfaces/js/napi/BUILD.gn
+++ b/connected_tag/interfaces/js/napi/BUILD.gn
@@ -32,17 +32,17 @@ ohos_shared_library("connectedtag") {
     "nfc_napi_event.cpp",
     "nfc_napi_utils.cpp",
   ]
-  deps = [
-    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
-    "//base/notification/common_event_service/frameworks/core:cesfwk_core",
-    "//base/notification/common_event_service/frameworks/native:cesfwk_innerkits",
-    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
-    "//foundation/arkui/napi:ace_napi",
-    "//foundation/communication/nfc/connected_tag/interfaces/innerkits:connected_tag_base",
-    "//utils/native/base:utils",
-  ]
+  deps = [ "//foundation/communication/nfc/connected_tag/interfaces/innerkits:connected_tag_base" ]
 
-  external_deps = [ "ipc:ipc_core" ]
+  external_deps = [
+    "ability_base:want",
+    "common_event_service:cesfwk_core",
+    "common_event_service:cesfwk_innerkits",
+    "hiviewdfx_hilog_native:libhilog",
+    "ipc:ipc_core",
+    "napi:ace_napi",
+    "utils_base:utils",
+  ]
 
   relative_install_dir = "module"
   part_name = "nfc_connected_tag"
