--- a/nfc_core/interfaces/innerkits/BUILD.gn
+++ b/nfc_core/interfaces/innerkits/BUILD.gn
@@ -41,6 +41,11 @@ ohos_shared_library("nfc_inner_kits") {
     "src/tags/basic_tag_session.cpp",
     "src/tags/iso15693_tag.cpp",
     "src/tags/isodep_tag.cpp",
+    "src/tags/mifare_classic_tag.cpp",
+    "src/tags/mifare_ultralight_tag.cpp",
+    "src/tags/ndef_formatable_tag.cpp",
+    "src/tags/ndef_message.cpp",
+    "src/tags/ndef_tag.cpp",
     "src/tags/nfca_tag.cpp",
     "src/tags/nfcb_tag.cpp",
     "src/tags/tag_session_proxy.cpp",
