update log print API
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/nfc_core/services/etc/init/nfc_service.cfg
+++ b/nfc_core/services/etc/init/nfc_service.cfg
@@ -2,7 +2,7 @@
     "jobs" : [{
             "name" : "post-fs-data",
             "cmds" : [
-                "mkdir /data/nfc_core",
+                "mkdir /data/nfc",
                 "start nfc_service"
             ]
         }
