--- a/nfc_core/services/BUILD.gn
+++ b/nfc_core/services/BUILD.gn
@@ -38,6 +38,7 @@ config("nfc_config") {
 
 ohos_shared_library("nfc_service") {
   sources = [
+    "src/common_event_handler.cpp",
     "src/controller/nfc_controller_impl.cpp",
     "src/controller/nfc_controller_stub.cpp",
     "src/nci_adapter/nci_adaptations.cpp",
@@ -69,6 +70,7 @@ ohos_shared_library("nfc_service") {
     "access_token:libaccesstoken_sdk",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
+    "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
