add some tags test for unittest
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/nfc_core/test/services/unittest/BUILD.gn
+++ b/nfc_core/test/services/unittest/BUILD.gn
@@ -62,7 +62,12 @@ ohos_unittest("tags_test") {
   module_out_path = "nfc/services"
 
   sources = [
+    "tags_test/iso15693_tag_test.cpp",
+    "tags_test/isodep_tag_test.cpp",
+    "tags_test/mifare_classic_tag_test.cpp",
+    "tags_test/ndef_tag_test.cpp",
     "tags_test/nfca_tag_test.cpp",
+    "tags_test/nfcb_tag_test.cpp",
     "tags_test/tag_info_test.cpp",
   ]
 
