Add fuzztest for nfc core
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/nfc_core/test/fuzztest/BUILD.gn
+++ b/nfc_core/test/fuzztest/BUILD.gn
@@ -13,10 +13,7 @@
 
 import("//build/test.gni")
 
-group("test_nfc_service") {
+group("fuzztest") {
   testonly = true
-  deps = [
-    "fuzztest:fuzztest",
-    "unittest:unittest",
-  ]
+  deps = [ "tags_test/taginfo:taginfo_fuzztest" ]
 }
