--- a/nfc_core/test/fuzztest/tags_test/taginfo/BUILD.gn
+++ b/nfc_core/test/fuzztest/tags_test/taginfo/BUILD.gn
@@ -13,10 +13,12 @@
 
 import("//build/test.gni")
 
-group("test_nfc_service") {
+group("taginfo_fuzztest") {
   testonly = true
   deps = [
-    "fuzztest:fuzztest",
-    "unittest:unittest",
+    "getintextrasdata_fuzzer:fuzztest",
+    "getstringextrasdata_fuzzer:fuzztest",
+    "gettechextrasdata_fuzzer:fuzztest",
+    "istechsupported_fuzzer:fuzztest",
   ]
 }
