--- a/nfc_core/interfaces/js/napi/controller/BUILD.gn
+++ b/nfc_core/interfaces/js/napi/controller/BUILD.gn
@@ -15,6 +15,7 @@ import("//build/ohos.gni")
 import("//build/ohos_var.gni")
 
 ohos_shared_library("controller") {
+  defines = [ "DEBUG" ]
   install_enable = true
   include_dirs = [
     "//third_party/node/src",
@@ -23,16 +24,18 @@ ohos_shared_library("controller") {
     "//utils/system/safwk/native/include",
     "//foundation/communication/nfc/nfc_core/interfaces/innerkits/include",
     "//foundation/communication/nfc/nfc_core/interfaces/innerkits/include/controller",
-    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
     "//base/notification/common_event_service/frameworks/core/include",
   ]
 
   sources = [
     "nfc_napi_controller.cpp",
     "nfc_napi_controller_adapter.cpp",
+    "nfc_napi_controller_event.cpp",
   ]
 
-  deps = [ "//foundation/communication/nfc/nfc_core/interfaces/innerkits:nfc_inner_kits" ]
+  deps = [
+    "//foundation/communication/nfc/nfc_core/interfaces/innerkits:nfc_inner_kits",
+  ]
 
   external_deps = [
     "ability_base:want",
