Add tag B/V/IsoDep NAPI
Signed-off-by: zhuyunzhi <zhuyunzhi@kaihongdigi.com>

--- a/nfc_core/interfaces/js/napi/tag/BUILD.gn
+++ b/nfc_core/interfaces/js/napi/tag/BUILD.gn
@@ -26,9 +26,11 @@ ohos_shared_library("tag") {
 
   sources = [
     "nfc_napi_tag.cpp",
-    "nfc_napi_tag_context.cpp",
+    "nfc_napi_tag_isodep.cpp",
     "nfc_napi_tag_sesstion.cpp",
     "nfc_napi_taga.cpp",
+    "nfc_napi_tagb.cpp",
+    "nfc_napi_tagv.cpp",
     "nfc_napi_utils.cpp",
   ]
 
