--- a/nfc_core/interfaces/innerkits/BUILD.gn
+++ b/nfc_core/interfaces/innerkits/BUILD.gn
@@ -49,6 +49,7 @@ ohos_shared_library("nfc_inner_kits") {
     "src/tags/ndef_tag.cpp",
     "src/tags/nfca_tag.cpp",
     "src/tags/nfcb_tag.cpp",
+    "src/tags/nfcf_tag.cpp",
     "src/tags/tag_session_proxy.cpp",
     "src/tags/taginfo.cpp",
   ]
