--- a/nfc_core/interfaces/js/napi/tag/BUILD.gn
+++ b/nfc_core/interfaces/js/napi/tag/BUILD.gn
@@ -27,6 +27,8 @@ ohos_shared_library("tag") {
   sources = [
     "nfc_napi_tag.cpp",
     "nfc_napi_tag_isodep.cpp",
+    "nfc_napi_tag_mifare_classic.cpp",
+    "nfc_napi_tag_mifare_ul.cpp",
     "nfc_napi_tag_sesstion.cpp",
     "nfc_napi_taga.cpp",
     "nfc_napi_tagb.cpp",
