--- a/nfc_core/interfaces/js/napi/tag/BUILD.gn
+++ b/nfc_core/interfaces/js/napi/tag/BUILD.gn
@@ -44,11 +44,11 @@ ohos_shared_library("tag") {
 
   external_deps = [
     "ability_base:want",
+    "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
     "samgr_standard:samgr_proxy",
-    "utils_base:utils",
   ]
 
   relative_install_dir = "module/nfc"
