--- a/connected_tag/interfaces/innerkits/BUILD.gn
+++ b/connected_tag/interfaces/innerkits/BUILD.gn
@@ -43,10 +43,10 @@ ohos_shared_library("connected_tag_base") {
   deps = []
 
   external_deps = [
+    "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "samgr_standard:samgr_proxy",
-    "utils_base:utils",
   ]
 
   subsystem_name = "communication"
