--- a/connected_tag/services/BUILD.gn
+++ b/connected_tag/services/BUILD.gn
@@ -39,12 +39,12 @@ ohos_shared_library("nfc_connected_tag_service") {
 
   external_deps = [
     "access_token:libaccesstoken_sdk",
+    "c_utils:utils",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
-    "utils_base:utils",
   ]
 
   part_name = "nfc_connected_tag"
