--- a/nfc_core/services/BUILD.gn
+++ b/nfc_core/services/BUILD.gn
@@ -74,6 +74,7 @@ ohos_shared_library("nfc_service") {
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
+    "c_utils:utils",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "eventhandler:libeventhandler",
@@ -81,7 +82,6 @@ ohos_shared_library("nfc_service") {
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
-    "utils_base:utils",
   ]
 
   part_name = "nfc"
