--- a/nfc_core/test/fuzztest/tags_test/taginfo/getstringextrasdata_fuzzer/BUILD.gn
+++ b/nfc_core/test/fuzztest/tags_test/taginfo/getstringextrasdata_fuzzer/BUILD.gn
@@ -37,8 +37,8 @@ ohos_fuzztest("GetStringExtrasDataFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "c_utils:utils",
     "ipc:ipc_core",
-    "utils_base:utils",
   ]
 }
 
