--- a/connected_tag/interfaces/innerkits/BUILD.gn
+++ b/connected_tag/interfaces/innerkits/BUILD.gn
@@ -45,7 +45,7 @@ ohos_shared_library("connected_tag_base") {
   external_deps = [
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "samgr_standard:samgr_proxy",
+    "samgr:samgr_proxy",
     "utils_base:utils",
   ]
 
