--- a/nfc_core/interfaces/innerkits/BUILD.gn
+++ b/nfc_core/interfaces/innerkits/BUILD.gn
@@ -64,7 +64,7 @@ ohos_shared_library("nfc_inner_kits") {
     "ability_base:want",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "samgr_standard:samgr_proxy",
+    "samgr:samgr_proxy",
     "utils_base:utils",
   ]
 
