fixed b5469d6 from https://gitee.com/knpingan/communication_nfc_11/pulls/105 change root to nfc
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/nfc_core/services/etc/init/nfc_service.cfg
+++ b/nfc_core/services/etc/init/nfc_service.cfg
@@ -10,8 +10,9 @@
     "services" : [{
             "name" : "nfc_service",
             "path" : ["/system/bin/sa_main", "/system/profile/nfc_service.xml"],
-            "uid" : "root",
-            "gid" : ["root", "shell"]
+            "uid" : "nfc",
+            "gid" : ["nfc", "shell"],
+            "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"]
         }
     ]
 }
