--- a/connected_tag/services/etc/init/nfc_connected_tag_service.cfg
+++ b/connected_tag/services/etc/init/nfc_connected_tag_service.cfg
@@ -10,8 +10,9 @@
     "services" : [{
             "name" : "nfc_connected_tag_service",
             "path" : ["/system/bin/sa_main", "/system/profile/nfc_connected_tag_service.xml"],
-            "uid" : "root",
-            "gid" : ["root", "shell"]
+            "uid" : "nfc",
+            "gid" : ["nfc", "shell"],
+            "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"]
         }
     ]
 }
