Save nfc state into preferences database.
Signed-off-by: zhangxiuping <zhangxiuping@huawei.com>

--- a/nfc_core/services/BUILD.gn
+++ b/nfc_core/services/BUILD.gn
@@ -57,6 +57,7 @@ ohos_shared_library("nfc_service") {
     "src/tags/tag_session_stub.cpp",
     "src/utils/nfc_watch_dog.cpp",
     "src/utils/permission_tools.cpp",
+    "src/utils/preferences/nfc_pref_impl.cpp",
     "src/utils/synchronize_event.cpp",
   ]
 
@@ -80,8 +81,9 @@ ohos_shared_library("nfc_service") {
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "preferences:native_preferences",
     "safwk:system_ability_fwk",
-    "samgr_standard:samgr_proxy",
+    "samgr:samgr_proxy",
   ]
 
   part_name = "nfc"
