fixed 9471198 from https://gitee.com/zhao-yi46/communication_nfc/pulls/125 add parse nfc chiptype
Signed-off-by: zhaoyi <zhaoyi46@huawei.com>

--- a/nfc_core/services/BUILD.gn
+++ b/nfc_core/services/BUILD.gn
@@ -55,6 +55,7 @@ ohos_shared_library("nfc_service") {
     "src/tags/tag_dispatcher.cpp",
     "src/tags/tag_session.cpp",
     "src/tags/tag_session_stub.cpp",
+    "src/utils/nfc_chip_type_parser.cpp",
     "src/utils/nfc_watch_dog.cpp",
     "src/utils/permission_tools.cpp",
     "src/utils/preferences/nfc_pref_impl.cpp",
