--- a/frameworks/js/napi/cardEmulation/BUILD.gn
+++ b/frameworks/js/napi/cardEmulation/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -14,7 +14,7 @@
 import("//build/ohos.gni")
 import("//build/ohos_var.gni")
 
-ohos_shared_library("cardEmulation") {
+ohos_shared_library("cardemulation") {
   defines = [ "DEBUG" ]
   install_enable = true
   include_dirs = [
@@ -36,12 +36,10 @@ ohos_shared_library("cardEmulation") {
       [ "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits" ]
 
   external_deps = [
-    "ability_base:want",
     "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
-    "samgr:samgr_proxy",
   ]
 
   relative_install_dir = "module/nfc"
