fix：add nfc_f test module
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -68,6 +68,7 @@ ohos_unittest("tags_test") {
     "tags_test/ndef_tag_test.cpp",
     "tags_test/nfca_tag_test.cpp",
     "tags_test/nfcb_tag_test.cpp",
+    "tags_test/nfcf_tag_test.cpp",
     "tags_test/tag_info_test.cpp",
   ]
 
