--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -20,6 +20,7 @@ config("nfc_service_unit_test_config") {
     "//foundation/communication/nfc/interfaces/inner_api/include",
     "//foundation/communication/nfc/interfaces/inner_api/include/controller",
     "//foundation/communication/nfc/interfaces/inner_api/include/tags",
+    "//foundation/communication/nfc/interfaces/inner_api/include/cardEmulation",
   ]
 
   defines = []
@@ -58,6 +59,21 @@ ohos_unittest("controller_test") {
   subsystem_name = "communication"
 }
 
+ohos_unittest("cardemulation_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "cardemulation_test/cardemulation_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
 ohos_unittest("tags_test") {
   module_out_path = "nfc/services"
 
@@ -85,6 +101,7 @@ ohos_unittest("tags_test") {
 group("nfc_service_unittest") {
   testonly = true
   deps = [
+    ":cardemulation_test",
     ":controller_test",
     ":tags_test",
   ]
