test: add taginfo fuzz test case
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/test/fuzztest/tags_test/taginfo/BUILD.gn
+++ b/test/fuzztest/tags_test/taginfo/BUILD.gn
@@ -16,9 +16,13 @@ import("//build/test.gni")
 group("taginfo_fuzztest") {
   testonly = true
   deps = [
+    "getboolextrasdata_fuzzer:fuzztest",
     "getintextrasdata_fuzzer:fuzztest",
     "getstringextrasdata_fuzzer:fuzztest",
-    "gettechextrasdata_fuzzer:fuzztest",
+    "getstringtach_fuzzer:fuzztest",
+    "gettechextrasbyindex_fuzzer:fuzztest",
+    "gettechextrasbytech_fuzzer:fuzztest",
     "istechsupported_fuzzer:fuzztest",
+    "setconnectedtagtech_fuzzer:fuzztest",
   ]
 }
