test: add nfc tags fuzz test case
Signed-off-by: knpingan <zhangxiuping@huawei.com>

--- a/test/fuzztest/tags_test/mifareultralighttag/BUILD.gn
+++ b/test/fuzztest/tags_test/mifareultralighttag/BUILD.gn
@@ -13,16 +13,7 @@
 
 import("//build/test.gni")
 
-group("taginfo_fuzztest") {
+group("mifareultralighttag_fuzztest") {
   testonly = true
-  deps = [
-    "getboolextrasdata_fuzzer:fuzztest",
-    "getintextrasdata_fuzzer:fuzztest",
-    "getstringextrasdata_fuzzer:fuzztest",
-    "getstringtach_fuzzer:fuzztest",
-    "gettechextrasbyindex_fuzzer:fuzztest",
-    "gettechextrasbytech_fuzzer:fuzztest",
-    "istechsupported_fuzzer:fuzztest",
-    "setconnectedtagtech_fuzzer:fuzztest",
-  ]
+  deps = [ "mifareultralighttag_fuzzer:fuzztest" ]
 }
