--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -15,5 +15,12 @@ import("//build/test.gni")
 
 group("fuzztest") {
   testonly = true
-  deps = [ "tags_test/taginfo:taginfo_fuzztest" ]
+  deps = [
+    "tags_test/isodeptag:isodeptag_fuzztest",
+    "tags_test/mifareclassictag:mifareclassictag_fuzztest",
+    "tags_test/mifareultralighttag:mifareultralighttag_fuzztest",
+    "tags_test/ndeftag:ndeftag_fuzztest",
+    "tags_test/nfca_tag:nfca_tag_fuzztest",
+    "tags_test/taginfo:taginfo_fuzztest",
+  ]
 }
