--- a/test/fuzztest/tags_test/iso15693tag/BUILD.gn
+++ b/test/fuzztest/tags_test/iso15693tag/BUILD.gn
@@ -13,15 +13,7 @@
 
 import("//build/test.gni")
 
-group("fuzztest") {
+group("iso15693tag_fuzztest") {
   testonly = true
-  deps = [
-    "tags_test/iso15693tag:iso15693tag_fuzztest",
-    "tags_test/isodeptag:isodeptag_fuzztest",
-    "tags_test/mifareclassictag:mifareclassictag_fuzztest",
-    "tags_test/mifareultralighttag:mifareultralighttag_fuzztest",
-    "tags_test/ndeftag:ndeftag_fuzztest",
-    "tags_test/nfca_tag:nfca_tag_fuzztest",
-    "tags_test/taginfo:taginfo_fuzztest",
-  ]
+  deps = [ "iso15693tag_fuzzer:fuzztest" ]
 }
