--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -12,7 +12,9 @@
             "path" : ["/system/bin/sa_main", "/system/profile/nfc_service.xml"],
             "uid" : "nfc",
             "gid" : ["nfc", "shell"],
-            "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"]
+            "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"],
+            "apl" : "system_basic",
+            "permission" : ["ohos.permission.VIBRATE"]
         }
     ]
 }
