--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -12,6 +12,7 @@
             "path" : ["/system/bin/sa_main", "/system/profile/nfc_service.xml"],
             "uid" : "nfc",
             "gid" : ["nfc", "shell"],
+            "secon" : "u:r:nfc_service:s0",
             "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"],
             "apl" : "system_basic",
             "permission" : ["ohos.permission.VIBRATE"]
