--- a/frameworks/js/napi/controller/BUILD.gn
+++ b/frameworks/js/napi/controller/BUILD.gn
@@ -18,25 +18,21 @@ ohos_shared_library("controller") {
   defines = [ "DEBUG" ]
   install_enable = true
   include_dirs = [
-    "//third_party/node/src",
-    "//native_engine",
-    "//commonlibrary/c_utils/base/include",
-    "//utils/system/safwk/native/include",
     "//foundation/communication/nfc/interfaces/inner_api/include",
     "//foundation/communication/nfc/interfaces/inner_api/include/controller",
-    "//base/notification/common_event_service/frameworks/core/include",
   ]
 
   sources = [
     "nfc_napi_controller.cpp",
     "nfc_napi_controller_adapter.cpp",
     "nfc_napi_controller_event.cpp",
+    "nfc_napi_ctrl_utils.cpp",
   ]
 
-  deps = [ "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits" ]
+  deps =
+      [ "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits" ]
 
   external_deps = [
-    "ability_base:want",
     "c_utils:utils",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
