--- a/frameworks/js/napi/tag/BUILD.gn
+++ b/frameworks/js/napi/tag/BUILD.gn
@@ -18,8 +18,6 @@ ohos_shared_library("tag") {
   defines = [ "DEBUG" ]
   install_enable = true
   include_dirs = [
-    "//third_party/node/src",
-    "//native_engine",
     "//foundation/communication/nfc/interfaces/inner_api/include",
     "//foundation/communication/nfc/interfaces/inner_api/include/tags",
   ]
@@ -33,11 +31,11 @@ ohos_shared_library("tag") {
     "nfc_napi_tag_ndef.cpp",
     "nfc_napi_tag_ndef_formatable.cpp",
     "nfc_napi_tag_sesstion.cpp",
+    "nfc_napi_tag_utils.cpp",
     "nfc_napi_taga.cpp",
     "nfc_napi_tagb.cpp",
     "nfc_napi_tagf.cpp",
     "nfc_napi_tagv.cpp",
-    "nfc_napi_utils.cpp",
   ]
 
   deps =
