decouple librpc so
Signed-off-by: shufewhx <wanghaoxu1@huawei.com>

--- a/frameworks/js/napi/tag/BUILD.gn
+++ b/frameworks/js/napi/tag/BUILD.gn
@@ -46,7 +46,7 @@ ohos_shared_library("tag") {
     "c_utils:utils",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "ipc_js:rpc",
+    "ipc:ipc_napi_common",
     "napi:ace_napi",
     "samgr:samgr_proxy",
   ]
