fix: cannt open chip_type file problem
Signed-off-by: zhaoyi46@huawei.com <zhaoyi46@huawei.com>

--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -2,6 +2,8 @@
     "jobs" : [{
             "name" : "post-fs-data",
             "cmds" : [
+                "chown nfc /sys/nfc/nfc_chip_type",
+                "chgrp nfc /sys/nfc/nfc_chip_type",
                 "mkdir /data/nfc",
                 "start nfc_service"
             ]
