--- a/test/fuzztest/tags_test/taginfo/BUILD.gn
+++ b/test/fuzztest/tags_test/taginfo/BUILD.gn
@@ -19,7 +19,7 @@ group("taginfo_fuzztest") {
     "getboolextrasdata_fuzzer:fuzztest",
     "getintextrasdata_fuzzer:fuzztest",
     "getstringextrasdata_fuzzer:fuzztest",
-    "getstringtach_fuzzer:fuzztest",
+    "getstringtech_fuzzer:fuzztest",
     "gettechextrasbyindex_fuzzer:fuzztest",
     "gettechextrasbytech_fuzzer:fuzztest",
     "istechsupported_fuzzer:fuzztest",
