--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -98,11 +98,27 @@ ohos_unittest("tags_test") {
   subsystem_name = "communication"
 }
 
+ohos_unittest("public_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "public_test/nfc_public_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
 group("nfc_service_unittest") {
   testonly = true
   deps = [
     ":cardemulation_test",
     ":controller_test",
+    ":public_test",
     ":tags_test",
   ]
 }
