NFC 前向cfi使能，boundary使能 Signed-off-by: 贺飞跃 <hefeiyue@h-partners.com>

--- a/frameworks/js/napi/controller/BUILD.gn
+++ b/frameworks/js/napi/controller/BUILD.gn
@@ -15,6 +15,12 @@ import("//build/ohos.gni")
 import("//build/ohos_var.gni")
 
 ohos_shared_library("controller") {
+  sanitize = {
+    cfi = true
+    boundary_sanitize = true
+    cfi_cross_dso = true
+    debug = false
+  }
   defines = [ "DEBUG" ]
   install_enable = true
   include_dirs = [
