--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -81,7 +81,9 @@ ohos_unittest("tags_test") {
     "tags_test/iso15693_tag_test.cpp",
     "tags_test/isodep_tag_test.cpp",
     "tags_test/mifare_classic_tag_test.cpp",
+    "tags_test/mifare_ultralight_tag_test.cpp",
     "tags_test/ndef_formatable_tag_test.cpp",
+    "tags_test/ndef_message_test.cpp",
     "tags_test/ndef_tag_test.cpp",
     "tags_test/nfca_tag_test.cpp",
     "tags_test/nfcb_tag_test.cpp",
