--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -54,6 +54,7 @@ ohos_shared_library("nfc_service") {
     "src/nci_adapter/nci_adaptations.cpp",
     "src/nci_adapter/nfcc_host.cpp",
     "src/nci_adapter/nfcc_nci_adapter.cpp",
+    "src/nci_adapter/routing_manager.cpp",
     "src/nci_adapter/tag_host.cpp",
     "src/nci_adapter/tag_nci_adapter.cpp",
     "src/nfc_polling_params.cpp",
