--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -11,7 +11,7 @@
     ],
     "services" : [{
             "name" : "nfc_service",
-            "path" : ["/system/bin/sa_main", "/system/profile/nfc_service.xml"],
+            "path" : ["/system/bin/sa_main", "/system/profile/nfc_service.json"],
             "uid" : "nfc",
             "gid" : ["nfc", "shell"],
             "secon" : "u:r:nfc_service:s0",
