--- a/sa_profile/BUILD.gn
+++ b/sa_profile/BUILD.gn
@@ -14,7 +14,7 @@
 import("//build/ohos/sa_profile/sa_profile.gni")
 
 ohos_sa_profile("nfc_profile") {
-  sources = [ "1140.xml" ]
+  sources = [ "1140.json" ]
 
   part_name = "nfc"
 }
