--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/test.gni")
+import("../../nfc.gni")
 
 config("nfc_service_unit_test_config") {
   visibility = [ ":*" ]
@@ -30,6 +31,7 @@ config("nfc_service_unit_test_config") {
 }
 
 unit_test_deps = [
+  "$NFC_SERVICE_ROOT/services:nfc_service",
   "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits",
   "//third_party/googletest:gtest_main",
 ]
@@ -40,7 +42,6 @@ unit_test_external_deps = [
   "hiviewdfx_hilog_native:libhilog",
   "ipc:ipc_core",
   "safwk:system_ability_fwk",
-  "samgr:samgr_proxy",
   "samgr:samgr_proxy",
 ]
 
